# clipx

./: .gitignore  .prettierignore  .project  ClassDiagram.ucls  README  README.md  about.html  eslint.config.js  index.html  package.json  params.json  pnpm-lock.yaml  settings.html  teste.ucls  vite.config.js
.claude/: settings.local.json
.claude/docs/review/: 02-remove-unused-deps.md  03-cache-history-limit.md  04-proper-error-types.md
.github/workflows/: ci.yml  pages.yml  release.yml
ThreatDragonModels/asdf/: asdf.json
docs/: index.html
docs/prompts/review/: 08-extract-utility-functions.md  code-review.md
docs/prompts/review/done/: 01-fix-unwrap-panics.md  06-reuse-db-connection.md  07-add-db-index.md  09-invoke-service-layer.md  10-extract-history-item-component.md  11-extract-pinned-item-component.md  12-usememo-history-filter.md  13-event-name-constants.md  16-add-vitest-react-tests.md
docs/prompts/review/todo/: 14-add-eslint-prettier.md  15-fix-csp.md  17-add-rust-unit-tests.md  18-add-ci-lint-test.md
docs/review/: 05-split-lib-rs.md
src/: App.css  App.jsx  about.js  settings.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: about.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs  logging.rs  main.rs  monitor.rs  settings.rs  window.rs
src-tauri/src/commands/: apps.rs  clipboard.rs  logging.rs  mod.rs  pinned.rs  sessions.rs  settings.rs  window_pin.rs
src/components/: AppsTab.jsx  ContextMenu.jsx  HistoryItem.jsx  HistoryTab.jsx  PinnedItem.jsx  PinnedTab.jsx  SessionItem.jsx  SessionsTab.jsx  Settings.css  Settings.jsx
src/constants/: events.js
src/hooks/: useAppEvents.js  useContextMenu.js  useDragReorder.js  useItemTooltip.jsx
src/pt/adrz/clipx/: ClipFilterField.java  ClipFilterModel.java  ClipGUI.java  ClipList.java  ClipManager.java  ClipMenuBar.java  ClipOptions.java  ClipSysTray.java  ClipX.java  ClipboardList.java  ClipboardListener.java  EnableListener.java  GuiState.java  State.java
src/pt/adrz/clipx/fx/: ClipMain.java
src/pt/adrz/clipx/gui/: ClipGUI.java  ClipMenuBar.java  ClipOptions.java  ClipSysTray.java  Group.java
src/pt/adrz/clipx/gui/list/: ClipListModel.java  LeftList.java  Node.java  RightList.java
src/pt/adrz/clipx/gui/panels/: CentralPanel.java  LeftPanel.java  ListPanel.java  Panels.java  RightPanel.java
src/services/: clipboardService.js
src/utils/: shortcuts.js  shortcuts.test.js
