[package]
name = "clipx-scaffold"
version = "0.1.20"
description = "Desktop clipboard manager with history and pinned items"
authors = ["adrianojlt"]
license = "MIT"
edition = "2021"

[lib]
name = "clipx_scaffold_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
log = "0.4"
simplelog = { version = "0.12", features = ["paris"] }

[dev-dependencies]
tempfile = "3"
