[package]
name = "clipx-scaffold"
version = "0.1.28"
description = "Desktop clipboard manager with history and pinned items"
authors = ["adrianojlt"]
license = "MIT"
edition = "2021"

[lib]
name = "clipx_scaffold_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Binary name doubles as the macOS process/app-switcher title in dev (unbundled).
[[bin]]
name = "ClipX"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
log = "0.4"
simplelog = { version = "0.12", features = ["paris"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[dev-dependencies]
tempfile = "3"
